[package]
name = "startime"
version = "0.0.0"
authors = ["Quinn Okabayashi <quinnokabayashi@gmail.com>"]
description = "startime! {}"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QnnOkabayashi/startime"

[dependencies]
startime_impl = { version = "=0.0.0", path = "startime_impl" }

[workspace]
members = ["startime_impl", "tests"]
